# pacman

./: .gitignore  README.md  requirements.txt  setup.cfg
artwork/: genwalls.py
pmlib/: __init__.py  core.py  ghost_ootb.py  maps.py
qt/: main.py
qtpacman/: main.py
scripts/: pacman.py
