[metadata]
name = pacman
version = 0.5
description = Pacman Clone in CLI, Qt, HTML
long_description = file: README.md
keywords = pacman
license = GPL
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = pmlib, qtpacman
scripts =
    scripts/pacman.py

[options.package_data]
* = artwork/*.png

#[options.entry_points]
#console_scripts =
#    executable-name = package.module:function

[options.extras_require]
qt = PySide6
